[package]
name = "terris"
version = "0.0.1"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "A Rust+Elm web stack inspired by Phoenix LiveView"
keywords = ["elm"]
homepage = "https://github.com/kreibaum/terris"
repository = "https://github.com/kreibaum/terris"
readme = "README.md"
categories = ["web-programming", ]

[dependencies]
actix = "0.10.0"
actix-web = "3.3.3"
actix-web-actors = "3.0.0"
actix-files = "0.5.0"
log = "0.4.14"
lazy_static = "1.4.0"
rand = "0.8.4"
regex = "1.5.4"
rust_elm_typegen = "0.0.1"
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"

[dev-dependencies]
diesel = { version = "1.4.8", default-features=false, features = ["sqlite"] }
simplelog = "0.11.2"